<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:checked="true"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_drawer_inicio" />
        <item
            android:id="@+id/nav_myaccount"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/menu_drawer_micuenta" />


    </group>
        <item android:title="@string/menu_drawer_item_ajustes">
            <menu>

                <item
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/ic_settings_black_24dp"
                    android:title="@string/menu_drawer_settings" />
                <item
                    android:id="@+id/nav_social_network"
                    android:icon="@drawable/ic_menu_share"
                    android:title="@string/menu_drawer_redes_sociales" />

            </menu>
        </item>
</menu>
