<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="@dimen/margin_large_horizontal"
                android:layout_marginRight="@dimen/margin_large_horizontal"
                android:contentDescription="@string/icon_password_description"
                android:src="@drawable/ic_lock_black_24dp"
                android:tint="@color/colorPrimaryDark" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:counterMaxLength="15"
                app:passwordToggleDrawable="@drawable/ic_remove_red_eye_black_24dp"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorPrimaryDark">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/campo_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLength="15" />

            </android.support.design.widget.TextInputLayout>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <Button
                android:id="@+id/btn_registro"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="8dp"
                android:layout_gravity="center_horizontal"
                android:background="@android:color/darker_gray"
                android:enabled="false"
                android:text="@string/registrar"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="16sp"
                android:theme="@style/RaissedButton" />
        </LinearLayout>


    </LinearLayout>


</merge>