<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    tools:context="com.tusueldo.comodin.InicioActivity"
    tools:layout_constraintBottom_creator="1"
    tools:layout_constraintLeft_creator="1"
    tools:layout_constraintRight_creator="1"
    tools:layout_constraintTop_creator="1">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="57dp"
        android:layout_marginLeft="80dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/icon_logo_description"
        android:src="@drawable/logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_rectangulo"
        android:fontFamily="sans-serif"
        android:text="@string/signin"
        android:textAllCaps="false"
        android:textColor="#8CFFFFFF"
        android:textSize="18sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <Button
        android:id="@+id/btn_recuperar"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:fontFamily="sans-serif"
        android:text="@string/forgot_password"
        android:textAllCaps="false"
        android:textColor="#B3FFFFFF"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />


    <View
        android:id="@+id/line1"
        android:layout_width="100dp"
        android:layout_height="1dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="#33FFFFFF"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_recuperar" />

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="0dp"
        android:layout_toEndOf="@id/line1"
        android:layout_toLeftOf="@+id/line3"
        android:layout_toRightOf="@id/line1"
        android:layout_toStartOf="@+id/line3"
        android:text="@string/o"
        android:textAlignment="center"
        android:textColor="#B3FFFFFF"
        app:layout_constraintLeft_toRightOf="@+id/line1"
        app:layout_constraintRight_toLeftOf="@+id/line3"
        app:layout_constraintTop_toBottomOf="@+id/btn_recuperar" />

    <View
        android:id="@+id/line3"
        android:layout_width="100dp"
        android:layout_height="1dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:background="#33FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/text"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_recuperar"
        app:layout_constraintVertical_bias="0.0" />


    <com.facebook.login.widget.LoginButton
        android:id="@+id/btn_facebook"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:drawableLeft="@drawable/facebook_blanco"
        android:drawablePadding="5dp"
        android:drawableStart="@drawable/facebook_blanco"
        android:gravity="start|center"
        android:text="@string/conecta_con_facebook"
        android:textAllCaps="false"
        android:textColor="#B3FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/line4"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text"
        app:layout_constraintVertical_bias="0.0" />


    <View
        android:id="@+id/line4"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginBottom="4dp"
        android:background="#F2FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/btn_registrarse"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/btn_registrarse"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="296dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:fontFamily="sans-serif"
        android:gravity="bottom"
        android:text="@string/signup"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#B3FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:hint="@string/username"
        android:theme="@style/TextInputLayoutSigin"
        app:hintTextAppearance="@style/TextHint"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo">

        <EditText
            android:id="@+id/campo_usuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif"
            android:textColor="#F2FFFFFF"
            android:inputType="text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/comodin" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:hint="@string/password"
        android:theme="@style/TextInputLayoutSigin"
        app:hintTextAppearance="@style/TextHint"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username"
        app:passwordToggleDrawable="@drawable/ic_remove_red_eye_black_24dp"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="#F2FFFFFF">


        <EditText
            android:id="@+id/campo_password"
            style="?attr/editTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-62dp"
            android:fontFamily="sans-serif"
            android:inputType="textPassword"
            android:textColor="#F2FFFFFF"
            android:typeface="serif"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/campo_usuario" />
    </android.support.design.widget.TextInputLayout>


</android.support.constraint.ConstraintLayout>


